Fix message count badge alignment in the Console
Screenshot: https://imgur.com/a/P3dv7en

Bug:none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4976444
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -115,7 +115,7 @@
 }
 
 .console-message-repeat-count {
-  margin: 2px 0 0 10px;
+  margin: 1.4px 0 0 10px;
   flex: none;
 }
 
@@ -189,7 +189,7 @@
 
 .console-message-wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 4px;
   border-radius: 5px;
 
